--- a/Android/app/src/main/res/layout/fragment_map.xml
+++ b/Android/app/src/main/res/layout/fragment_map.xml
@@ -15,12 +15,12 @@
     </data>
 
     <FrameLayout
-        android:id="@+id/frame"
+        android:id="@+id/expand_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <android.support.constraint.ConstraintLayout
-            android:id="@+id/wrapper"
+            android:id="@+id/map"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -133,16 +133,28 @@
             android:layout_height="match_parent"
             android:visibility="invisible">
 
+            <ImageButton
+                android:id="@+id/edit_feedback"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:padding="4dp"
+                android:tint="@color/white"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
+                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
+                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+                app:srcCompat="@drawable/ic_edit_black_24dp" />
+
             <android.support.constraint.ConstraintLayout
+                android:id="@+id/constraintLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
                 android:background="@color/white"
-                android:padding="10dp"
+                android:padding="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -152,11 +164,8 @@
                     android:id="@+id/feedback_photo"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
                     android:adjustViewBounds="false"
                     android:scaleType="centerCrop"
                     app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
@@ -221,9 +230,6 @@
                     android:id="@+id/imageViewCat"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
                     android:adjustViewBounds="true"
                     android:contentDescription="@{feedback.positive ? @string/positive : @string/negative}"
                     android:scaleType="fitCenter"
@@ -239,8 +245,6 @@
                     android:id="@+id/textViewDetail"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="24dp"
-                    android:layout_marginRight="24dp"
                     android:layout_marginTop="8dp"
                     android:text="@{feedback.details}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
@@ -263,23 +267,6 @@
                     app:layout_constraintBottom_toBottomOf="@+id/imageViewCat"
                     app:layout_constraintStart_toEndOf="@+id/imageViewCat" />
 
-                <ImageView
-                    android:id="@+id/image_zoom"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:visibility="invisible"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_dark_black_24dp" />
-
             </android.support.constraint.ConstraintLayout>
         </android.support.constraint.ConstraintLayout>
 
@@ -288,6 +275,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
